--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,5 +3,6 @@ current_version = 0.0.0
 commit = True
 tag = True
 
-[bumpversion:file:autoprop/__init__.py]
+[bumpversion:file:setup.py]
+[bumpversion:file:autoprop.py]
 
