--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,21 @@
-language: python
+language:
+    python
 python:
+    - "2.5"
+    - "2.6"
+    - "2.7"
+    - "3.0"
+    - "3.1"
     - "3.2"
     - "3.3"
     - "3.4"
     - "3.5"
+    - "3.6"
     - "nightly"
 install:
     - pip install python-coveralls pytest-cov
     - pip install .
 script: 
-    - py.test tests -vv --cov autoprop
+    - py.test . -vv --cov autoprop
 after_success:
     - coveralls
