--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language:
     python
 python:
-    - "2.5"
-    - "2.6"
+    - "2.6" # class decorators were added in 2.6
     - "2.7"
     - "3.0"
     - "3.1"
