--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language:
     python
 python:
-    - "2.6" # class decorators were added in 2.6
+    # Travis doesn't seem to support python 2.6 anymore?
     - "2.7"
-    - "3.3"
-    - "3.4"
+
+    # Coveralls isn't compatible with python 3.0-3.4, so just don't bother.
     - "3.5"
     - "3.6"
+    - "3.7"
+    - "3.8"
     - "nightly"
 install:
     - pip install python-coveralls pytest-cov
