--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -32,7 +32,7 @@ jobs:
   release:
     name: Release to PyPI
     runs-on: ubuntu-latest
-    if: github.ref == 'master'
+    if: github.ref == 'refs/heads/master'
     needs: [test]
 
     steps:
