--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 addopts = --doctest-glob='*.rst'
 
 [semantic_release]
-version_variable = 'autoprop/__init__.py:__version__'
+version_variable = 'autoprop.py:__version__'
