chore: switch to pccc for commit linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,9 @@ doc = [
 addopts = "--doctest-modules --doctest-glob='*.rst'"
 doctest_optionflags = 'NORMALIZE_WHITESPACE'
 
+[tool.pccc]
+types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
+
 [tool.semantic_release]
 version_variable = 'autoprop.py:__version__'
 build_command = 'python -m pip install flit && flit build'
