--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ description-file = 'README.rst'
 requires-python = "~=3.6"
 requires = [
   'signature_dispatch',
-  'backports.cached-property',
+  'backports.cached-property;python_version<"3.8"',
 ]
 classifiers = [
   'Programming Language :: Python :: 3',
