--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 TODO
+cookie/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -38,6 +39,7 @@ pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
+prof/
 .tox/
 .coverage
 .coverage.*
