--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ home-page = 'https://github.com/kalekundert/autoprop'
 description-file = 'README.rst'
 requires-python = "~=3.6"
 requires = [
-  'signature_dispatch',
+  'signature_dispatch~=1.0',
   'backports.cached-property;python_version<"3.8"',
 ]
 classifiers = [
